--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         aprenda a ser um programador de <strong class="2">WEB</strong></h1>
           <img src="img/logo.png"
             class="container__imagem" alt="">
-          <a href="#" class="container__botao">faça o L por ate R$ 120,00 sem juros*</a>
+          <a href="#" class="container__botao">Por apenas 10x de 64,00*</a>
           <br>
-          <a href="#" class="container__botao botao_secundario">aproeite o seu cartao picanha por R$ 10000,00*</a>
-          <p class="container__aviso">O preço pode variar caso voce nao vote no nove dedos.</p>
+          <a href="#" class="container__botao botao_secundario">conheça outros planos</a>
+          <p class="container__aviso">Preço valido só até a recuperação</p>
     
         </div>
       </section>
