--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         aprenda a ser um programador de <strong class="2">WEB</strong></h1>
           <img src="img/logo.png"
             class="container__imagem" alt="">
-          <a href="#" class="container__botao">Por apenas 10x de 64,00*</a>
+          <a href="#" class="container__botao">Por apenas 10x de <strong>64,00*</strong></a>
           <br>
           <a href="#" class="container__botao botao_secundario">conheça outros planos</a>
           <p class="container__aviso">Preço valido só até a recuperação</p>
     
         </div>
       </section>
-      
+
 </body>
 </html>
