--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <div class="container__caixa">
           <h1 class="container__titulo">Curso de programação <strong>Balan Code </strong>
         aprenda a ser um programador de <strong class="2">WEB</strong></h1>
-          <img src="img/logo.png"
-            class="container__imagem" alt="">
-          <a href="#" class="container__botao">Por apenas 10x de <strong>64,00*</strong></a>
-          <br>
-          <a href="#" class="container__botao botao_secundario">conheça outros planos</a>
-          <p class="container__aviso">Preço valido só até a recuperação</p>
-    
-        </div>
+        class="container__imagem" alt="">
+        <a href="#" class="container__botao">Por apenas 10x de <strong>64,00*</strong></a>
+        <br>
+        <a href="#" class="container__botao botao_secundario">conheça outros planos</a>
+        <p class="container__aviso">Preço valido só até a recuperação</p>
+        
+      </div>
+      <img src="img/logo.png">
       </section>
 
 </body>
